--- a/colibre/description.html
+++ b/colibre/description.html
@@ -2,18 +2,11 @@
 
 <h4>Basic</h4>
 <ul>
-    <li>Box-size {{ data.metadata.boxsize[0] | format_number }}</li>
+    <li>Box-size: {{ data.metadata.boxsize[0] | format_number }}</li>
     <li>Dark matter particle mass: {{ data.dark_matter.masses[0].to("Solar_Mass") | format_number }}</li>
     <li>Gas particle mass: {{ data.gas.masses.min().to("Solar_Mass") | format_number }}</li>
     <li>Cube root of particle number: {{ (data.metadata.n_dark_matter**(1/3)+0.01) | int }}</li>
-    <li>Number of particles at \(z={{ "%2.2f" | format(data.metadata.z)}}\):
-        <ul>
-            <li>Dark matter: {{ data.metadata.n_dark_matter }}</li>
-            <li>Gas: {{ data.metadata.n_gas }}</li>
-            <li>Star: {{ data.metadata.n_stars }}</li>
-            <li>Black hole: {{ data.metadata.n_black_holes }}</li>
-        </ul>
-    </li>
+    <li>Snapshot \(z={{ "%2.2f" | format(data.metadata.z)}}\), \(a={{ "%2.2f" | format(data.metadata.a)}}\)</li>
     <li>Gravitational softenings:
         <ul>
             <li>Dark matter: {{ ((data.metadata.parameters["Gravity:max_physical_DM_softening"] | float) * data.units.length).to('kpc') | format_number }}</li>
@@ -21,6 +14,40 @@
         </ul>
     </li>
 </ul>
+<h4>Particle Numbers</h4>
+<table>
+    <tr>
+        <th>Gas</th>
+        <th>Dark Matter</th>
+        <th>Star</th>
+        <th>Black Hole</th>
+    </tr>
+    <tr>
+        <td>{{ data.metadata.n_gas }}</td>
+        <td>{{ data.metadata.n_dark_matter }}</td>
+        <td>{{ data.metadata.n_stars }}</td>
+        <td>{{ data.metadata.n_black_holes }}</td>
+    </tr>
+</table>
+<h4>Gravitational Softening</h4>
+<table>
+    <tr>
+        <th colspan=2>Baryons [kpc]</th>
+        <th colspan=2>Dark Matter [kpc]</th>
+    </tr>
+    <tr>
+        <th>Max Physical</th>
+        <th>Comoving</th>
+        <th>Max Physical</th>
+        <th>Comoving</th>
+    </tr>
+    <tr>
+        <td>{{ ((data.metadata.parameters["Gravity:max_physical_baryon_softening"] | float) * data.units.length).to('kpc') | float | format_number }}</td>
+        <td>{{ ((data.metadata.parameters["Gravity:comoving_baryon_softening"] | float) * data.units.length).to('kpc') | float | format_number }}</td>
+        <td>{{ ((data.metadata.parameters["Gravity:max_physical_DM_softening"] | float) * data.units.length).to('kpc') | float | format_number }}</td>
+        <td>{{ ((data.metadata.parameters["Gravity:comoving_DM_softening"] | float) * data.units.length).to('kpc') | float | format_number }}</td>
+    </tr>
+</table>
 <h4>Code Setup</h4>
 <ul>
     <li>Code info: {{ data.metadata.code_info }}</li>
