--- a/colibre/description.html
+++ b/colibre/description.html
@@ -7,6 +7,7 @@
     <li>Gas particle mass: {{ data.gas.masses.min().to("Solar_Mass") | format_number }}</li>
     <li>Snapshot \(z={{ "%2.2f" | format(data.metadata.z)}}\), \(a={{ "%2.2f" | format(data.metadata.a)}}\)</li>
 </ul>
+
 <h4>Particle Numbers</h4>
 <p>Cube root of Dark Matter particle number: {{ (data.metadata.n_dark_matter**(1/3)+0.01) | int }}</p>
 <table>
@@ -23,6 +24,7 @@
         <td>{{ data.metadata.n_black_holes }}</td>
     </tr>
 </table>
+
 <h4>Gravitational Softening</h4>
 <table>
     <tr>
@@ -42,6 +44,7 @@
         <td>{{ ((data.metadata.parameters["Gravity:comoving_DM_softening"] | float) * data.units.length).to('kpc') | float | format_number }}</td>
     </tr>
 </table>
+
 <h4>Star Formation</h4>
 <table>
     <tr>
@@ -69,6 +72,7 @@
         <td>{{ (data.metadata.parameters["COLIBREStarFormation:threshold_max_density_H_p_cm3"] | float) | format_number }} cm\(^{-3}\)</td>
     </tr>
 </table>
+
 <h4>Stellar Feedback</h4>
 <table>
     <tr>
@@ -96,6 +100,7 @@
         <td>{{ "%.4g" % (data.metadata.parameters["COLIBREFeedback:SNII_delta_v_km_p_s"] | float) }} km s\(^{-1}\)</td>
     </tr>
 </table>
+
 <h4>Entropy Floor</h4>
 {% if data.metadata.parameters.get("COLIBREEntropyFloor:Jeans_density_norm_H_p_cm3", False) %}
 <table>
@@ -113,6 +118,7 @@
 {% else %}
 <p>No entropy floor present.</p>
 {% endif %}
+
 <h4>AGN</h4>
 <table>
     <tr>
@@ -132,10 +138,6 @@
         <td>{{ data.metadata.parameters["COLIBREAGN:viscous_alpha"] | float | format_number }}</td>
     </tr>
     <tr>
-        <td>Reposition Velocity</td>
-        <td>{{ data.metadata.parameters.get("COLIBREAGN:reposition_coefficient_upsilon", 0.0) | float | format_number }}</td>
-    </tr>
-    <tr>
         <td>Subgrid Seed Mass</td>
         <td>{{ data.metadata.parameters["COLIBREAGN:subgrid_seed_mass_Msun"] | float | format_number }} M\(_\odot\)</td>
     </tr>
@@ -144,69 +146,43 @@
         <td>{{ "%.4g" % (data.metadata.parameters["COLIBREAGN:AGN_num_ngb_to_heat"] | float) }}</td>
     </tr>
     <tr>
+        <td>Use sub-grid properties</td>
+        <td>{{ data.metadata.parameters["COLIBREAGN:use_subgrid_gas_properties"] | bool }}</td>
+    </tr>
+    <tr>
         <td>Multi-phase Bondi</td>
-        <td>{{ data.metadata.parameters["COLIBREAGN:use_multi_phase_bondi"] }}</td>
+        <td>{{ data.metadata.parameters["COLIBREAGN:use_multi_phase_bondi"] | bool }}</td>
+    </tr>
+    <tr>
+        <td>Use Krumholtz Accretion</td>
+        <td>{{ data.metadata.parameters["COLIBREAGN:use_krumholz"] | bool }}</td>
+    </tr>
+    <tr>
+        <td>Use Krumholtz Vorticity</td>
+        <td>{{ data.metadata.parameters["COLIBREAGN:use_krumholz_vorticity"] | bool }}</td>
+    </tr>
+    <tr>
+        <td>Use Angular Momentum Limiter</td>
+        <td>{{ data.metadata.parameters["COLIBREAGN:with_angmom_limiter"] | bool }}</td>
+    </tr>
+    <tr>
+        <td>Reposition Velocity</td>
+        <td>{{ data.metadata.parameters.get("COLIBREAGN:reposition_coefficient_upsilon", 0.0) | float | format_number }}</td>
+    </tr>
+    <tr>
+        <td>Max Reposition Mass</td>
+        <td>{{ data.metadata.parameters.get("COLIBREAGN:reposition_coefficient_upsilon", 0.0) | float | format_number }} M\(_\odot\)</td>
+    </tr>
+    <tr>
+        <td>With Reposition Threshold</td>
+        <td>{{ data.metadata.parameters["COLIBREAGN:with_reposition_velocity_threshold"] | bool }}</td>
+    </tr>
+    <tr>
+        <td>Maximal Velocity Offset</td>
+        <td>{{ data.metadata.parameters.get("COLIBREAGN:reposition_coefficient_upsilon", 0.0) | float | format_number }} \(c_{s, {\rm BH}}\)</td>
     </tr>
 </table>
 
-{# 
-
-     try:
-        agn_feedback += f"""
-        <li>Use subgrid properties = {parameter_file['COLIBREAGN']['use_subgrid_gas_properties']}</li>
-        """
-    except KeyError:
-        pass
-
-    try:
-        agn_feedback += f"""
-        <li>Use Krumholz+2006 accretion rates = {parameter_file['COLIBREAGN']['use_krumholz']}</li>
-        <li>Use Krumholz+2006 vorticity term  = {parameter_file['COLIBREAGN']['with_krumholz_vorticity']}</li>
-        """
-    except KeyError:
-        pass
-
-    try:
-        agn_feedback += f"""
-        <li>Use Rosas-Guevara (2015) viscous time-scale reduction term = {parameter_file['COLIBREAGN']['with_angmom_limiter']}</li>
-        """
-    except KeyError:
-        pass
-
-    try:
-        agn_feedback += f"""
-        <li>Coupling efficiency = {parameter_file['COLIBREAGN']['coupling_efficiency']}</li>
-        """
-    except KeyError:
-        pass
-
-    try:
-        agn_feedback += f"""
-        <li>Maximal BH mass considered for BH repositioning = {parameter_file['COLIBREAGN']['max_reposition_mass']} M$_\\odot$</li>
-        """
-    except KeyError:
-        pass
-
-    try:
-        agn_feedback += f"""
-        <li>Only reposition to particles that move slowly w.r.t. the black hole =
-        {parameter_file['COLIBREAGN']['with_reposition_velocity_threshold']}</li>
-        """
-    except KeyError:
-        pass
-
-    try:
-        agn_feedback += f"""
-        <li>Maximal velocity offset for repositioning (units of BH sound speed) =
-        {parameter_file['COLIBREAGN']['max_reposition_velocity_ratio']}</li>
-        """
-    except KeyError:
-        pass
-
-except KeyError:
-    pass
-
-#}
 <h4>Code Setup</h4>
 <ul>
     <li>Code info: {{ data.metadata.code_info }}</li>
