--- a/colibre/description.html
+++ b/colibre/description.html
@@ -147,23 +147,23 @@
     </tr>
     <tr>
         <td>Use sub-grid properties</td>
-        <td>{{ data.metadata.parameters["COLIBREAGN:use_subgrid_gas_properties"] | bool }}</td>
+        <td>{{ data.metadata.parameters["COLIBREAGN:use_subgrid_gas_properties"] | int }}</td>
     </tr>
     <tr>
         <td>Multi-phase Bondi</td>
-        <td>{{ data.metadata.parameters["COLIBREAGN:use_multi_phase_bondi"] | bool }}</td>
+        <td>{{ data.metadata.parameters["COLIBREAGN:use_multi_phase_bondi"] | int }}</td>
     </tr>
     <tr>
         <td>Use Krumholtz Accretion</td>
-        <td>{{ data.metadata.parameters["COLIBREAGN:use_krumholz"] | bool }}</td>
+        <td>{{ data.metadata.parameters["COLIBREAGN:use_krumholz"] | int }}</td>
     </tr>
     <tr>
         <td>Use Krumholtz Vorticity</td>
-        <td>{{ data.metadata.parameters["COLIBREAGN:use_krumholz_vorticity"] | bool }}</td>
+        <td>{{ data.metadata.parameters["COLIBREAGN:use_krumholz_vorticity"] | int }}</td>
     </tr>
     <tr>
         <td>Use Angular Momentum Limiter</td>
-        <td>{{ data.metadata.parameters["COLIBREAGN:with_angmom_limiter"] | bool }}</td>
+        <td>{{ data.metadata.parameters["COLIBREAGN:with_angmom_limiter"] | int }}</td>
     </tr>
     <tr>
         <td>Reposition Velocity</td>
@@ -175,7 +175,7 @@
     </tr>
     <tr>
         <td>With Reposition Threshold</td>
-        <td>{{ data.metadata.parameters["COLIBREAGN:with_reposition_velocity_threshold"] | bool }}</td>
+        <td>{{ data.metadata.parameters["COLIBREAGN:with_reposition_velocity_threshold"] | int }}</td>
     </tr>
     <tr>
         <td>Maximal Velocity Offset</td>
