--- a/colibre/description.html
+++ b/colibre/description.html
@@ -106,12 +106,10 @@
 </table>
 
 <h4>Gas Cooling</h4>
-{% if data.metadata.parameters.get("CHIMESCooling:data_path", False) %}
-<p>CHIMES</p>
-{% elif data.metadata.parameters.get("COLIBRECooling:dir_name", False) %}
-<p>Table cooling (Ploeckinger, 2020)</p>
+{% if data.metadata.subgrid_scheme.get("Cooling Model", False) %}
+<p>{{ data.metadata.subgrid_scheme["Cooling Model"].decode("utf-8") }} </p>
 {% else %}
-<p>Disabled or unknown</p>
+<p>Disabled</p>
 {% endif %}
 
 <h4>Entropy Floor</h4>
